adjust model